tests/fixtures/invalid/dict_constructor_multiple_args.py
# dict() should not accept multiple arguments
# Expected error: "dict() takes no arguments"

d: dict[int, int] = dict(1, 2, 3)
